src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>TotalDaysOfContinuation__c</fullName>
        <description>SFDC1-5520 Total Days of Continuation for opportunity</description>
        <inlineHelpText>Total Days of Continuation</inlineHelpText>
        <label>Total Days of Continuation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalDaysStuckatcurrentstage__c</fullName>
        <description>SFDC1-4551. It shows for how many days Opportunity is being stuck at current stage.</description>
        <formula>TODAY() - DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Stuck at current stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalEffectiveDiscountAmtRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Sum of Discount Amount on  All Active Products on the Opportunity</description>
        <inlineHelpText>Sum of Discount Amount on  All Active Products on the Opportunity</inlineHelpText>
        <label>Total Effective Discount Amt</label>
        <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalListPriceRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Sum of the Price Book List Price for Active Products on the Opportunity</description>
        <inlineHelpText>Total Price Book List Price for all Active Products</inlineHelpText>
        <label>Total List Price</label>
        <summarizedField>OpportunityLineItem.ListPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOpportunityAmount__c</fullName>
        <description>SFDC1-7045:A new split type is needed to record the Split %&apos;s for SMEs (Subject Matter Experts).</description>
        <inlineHelpText>Amount calculated from related products</inlineHelpText>
        <label>Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSalesPriceRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Sum of Total Price for All Active Products on the Opportunity</description>
        <inlineHelpText>Total Sales Price for all Active Products</inlineHelpText>
        <label>Total Sales Price</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VarianceFormula__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Total Sales Price - Previous Year Total</description>
        <formula>TotalSalesPriceRollup__c -  PreviousYearTotalSalesPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Sales Price - Previous Year Total</inlineHelpText>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllClosedLostOpportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>6L-Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>6L-Renewal Lost</value>
        </filters>
        <label>All Closed Lost Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllClosedWonOpportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>6W-Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>6W-Renewal Won</value>
        </filters>
        <label>All Closed Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpenOpportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OpportunityRecordType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>3-Renewal Pending,5-Renewal Contracting</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AutoRenewal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesClosingNextMonth</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>3-Renewal Pending,5-Renewal Contracting</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>All Opportunities Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesClosingNextQuarter</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>3-Renewal Pending,5-Renewal Contracting</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_QUARTER</value>
        </filters>
        <label>All Opportunities Closing Next Quarter</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesClosingThisMonth</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>3-Renewal Pending,5-Renewal Contracting</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Opportunities Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesClosingThisQuarter</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>3-Renewal Pending,5-Renewal Contracting</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>All Opportunities Closing This Quarter</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Demo</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Demo</label>
    </listViews>
    <listViews>
        <fullName>MyClosedWonOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>6W-Renewal Won,6W-Closed Won</value>
        </filters>
        <label>My Closed Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpenNewBusinessOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop,5</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.NewBusiness</value>
        </filters>
        <label>My Open New Business Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpenOpportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>1-Sales Qualified,2-Need Confirmed,3-Proposal Development and Delivery,4-Prop,5</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>3-Renewal Pending,5-Renewal Contracting</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>Gratis</fullName>
        <active>true</active>
        <businessProcess>Gratis Opportunity</businessProcess>
        <description>Opportunity with Zero Cost</description>
        <label>Gratis</label>
    </recordTypes>
    <recordTypes>
        <fullName>InnerYear</fullName>
        <active>true</active>
        <businessProcess>Inner Year Process</businessProcess>
        <description>Inner Year Record Type to see Inner Year opportunities</description>
        <label>Inner Year</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewBusiness</fullName>
        <active>true</active>
        <businessProcess>New Business Opportunity</businessProcess>
        <description>For New Business opportunity</description>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Placeholder</fullName>
        <active>true</active>
        <businessProcess>Forecasting Placeholder Process</businessProcess>
        <description>For Retail Business</description>
        <label>Forecasting Placeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <businessProcess>Renewal Business</businessProcess>
        <description>For Renewal use only</description>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>APIAllowedLostReasonCode</fullName>
        <active>true</active>
        <description>SFDC1-6704 : the Reason Code :&apos;Systematically Closed Lost - Past Due&apos; should be allowed via API Users only using integration.</description>
        <errorConditionFormula>TEXT(LostReasonCode__c) = &apos;Systematically Closed Lost - Past Due&apos;   &amp;&amp;   
			NOT(CONTAINS($Profile.Name, &apos;API&apos;) )</errorConditionFormula>
        <errorDisplayField>LostReasonCode__c</errorDisplayField>
        <errorMessage>You can not set this reason.Please select another reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActivityRequiredForStage5NewBusiness</fullName>
        <active>true</active>
        <description>SFDC1-6066 : Activity is required when opportunity is set on stage &apos;5-Contracting&apos; for New Business.This validation will only be fired when user skip the stage 4 and activity check is skipped.</description>
        <errorConditionFormula>AND( 
TEXT(StageName) = &quot;5-Contracting&quot;,
RecordType.Name = &quot;New Business&quot;,
NOT(ActivityCreated__c)
)</errorConditionFormula>
        <errorMessage>On Stage 5-Contracting opportunity must have an activity referenced to it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AutoRenewalStoppedContracts</fullName>
        <active>true</active>
        <description>SFDC1-6617;When Auto Renewal = Yes and Does this Auto Renew have Changes? is set to &quot;No&quot; AND Auto Renew Stopped = &quot;Yes&quot; = No -- Do not allow a user to manually close win the opportunity from the opportunity\they must close win by clicking ready for proces</description>
        <errorConditionFormula>AND( ( AutoRenewal__c  = True),
( DoesThisAutoRenewalHaveChanges__c = False),
(AutoRenewStopped__c = True),
($RecordType.Name =&apos;Renewal&apos; ),
ReadyForProcessingContractExist__c == FALSE, 
(ISPICKVAL(StageName, &quot;6W-Renewal Won&quot;)))</errorConditionFormula>
        <errorMessage>Please close opportunity by clicking ready for Processing on the contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BudgetConfirmedRequiredPastStage2</fullName>
        <active>true</active>
        <description>Validation rule for anything past Stage 2 that makes the Budget and Closed date field required</description>
        <errorConditionFormula>AND( 
	$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
        $Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;, 
	$Profile.Name &lt;&gt; &quot;IHSMarkit Sales: Sales Ops&quot;, 
	NOT(ISPICKVAL(StageName , &apos;1-Sales Qualified&apos;)), 
	$RecordType.Name = &quot;New Business&quot;, 
	OR(
		(ISPICKVAL(BudgetRange__c,&quot;&quot;)), 
		ISBLANK(CloseDate) 
	) 
)</errorConditionFormula>
        <errorMessage>Please confirm the Budget Range and Closed Date for this opportunity as this is moving past Stage1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BudgetRangeRequiredForStage1</fullName>
        <active>false</active>
        <description>Validation rule for anything past Stage1 that makes the Budget Range and Closed date field required</description>
        <errorConditionFormula>AND( 
	$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
	$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;, 
	$Profile.Name &lt;&gt; &quot;IHSMarkit Sales: Sales Ops&quot;, 
	NOT(ISBLANK(TEXT(StageName))), 
	$RecordType.Name = &quot;New Business&quot;, 
	OR( 
		ISBLANK(TEXT(BudgetRange__c)), 
		ISBLANK(CloseDate) 
	) 
)</errorConditionFormula>
        <errorMessage>Please confirm the Budget Range and Closed Date for this opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BudgetRangeRequiredStage1</fullName>
        <active>false</active>
        <description>SFDC1-551; User is required to fill in this field when saving an Opportunity at Sales Stage 1 on a new business opportunity</description>
        <errorConditionFormula>AND
(ISPICKVAL(StageName , &apos;1-Sales Qualified&apos;),
$RecordType.Name = &quot;New Business&quot;,
(ISPICKVAL(BudgetRange__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>BudgetRange__c</errorDisplayField>
        <errorMessage>Please populate Budget Range for this Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChannelPartnerRequiredforGASalesChannel</fullName>
        <active>true</active>
        <description>SFDC1-4394 : Channel Partner field is required when Sales Channel is selected as Global Alliance</description>
        <errorConditionFormula>If(AND(TEXT(SubType__c)== &apos;Global Alliance&apos;,(ISBLANK(ChannelPartner__c))),true, false)</errorConditionFormula>
        <errorMessage>Channel Partner is required for &apos;Global Alliance&apos; Sales Channel</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCommunityUserasNewOpportunityOwner</fullName>
        <active>true</active>
        <description>SFDC1-4395 IHSMarkit Employees should not be allowed to change the Opportunity Owner to a Channel Partner User.
SFDC1-6387 : Added the SalesOps Profile to allow transfer to Partner User Opp Owner.</description>
        <errorConditionFormula>AND( 
	(ISCHANGED(OwnerId)), 
	CONTAINS(Owner.Profile.Name,&quot;IHS Markit: Channel Partner User&quot;),
	NOT(
		OR(
			CONTAINS($Profile.Name,&quot;IHS Markit: Channel Partner User&quot;),
			CONTAINS($Profile.Name,&quot;Sales Ops&quot;)
		)
	)
)</errorConditionFormula>
        <errorMessage>IHSMarkit Employees cannot transfer Opportunity to Channel Partner User</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractDates</fullName>
        <active>true</active>
        <description>SFDC1-653 Contract Start Date should be less than Contract End Date</description>
        <errorConditionFormula>ContractStartDate__c &gt;  ContractEndDate__c</errorConditionFormula>
        <errorMessage>Contract End Date must be Greater than or Equal to Contract Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GenAgreementReqOnOrderFormOriginatingCon</fullName>
        <active>true</active>
        <description>SFDC1-7573: Making general Agreement Type and Agreement Effective Date required on Originating Contract to display error message to Users.</description>
        <errorConditionFormula>AND(  RecordType.Name   == &apos;Renewal&apos;, 
        ISCHANGED(StageName), 
	ISPICKVAL(StageName,&apos;6L-Renewal Lost&apos;),
        
      NOT(ISNULL(ContractBeingRenewed__c)), 
	ContractBeingRenewed__r.RecordType.Name == &apos;Order Form&apos;, 
	ContractBeingRenewed__r.Fastrack__c == FALSE, 
        ContractBeingRenewed__r.Opportunity__r.RecordType.Name&lt;&gt;&apos;Gratis&apos;,
	
	OR( 
		ISBLANK(TEXT(ContractBeingRenewed__r.GeneralAgreementType__c)),
		AND (
			OR (
				ISPICKVAL(ContractBeingRenewed__r.GeneralAgreementType__c,&apos;IHS General Agreement&apos;),
				ISPICKVAL(ContractBeingRenewed__r.GeneralAgreementType__c,&apos;IHS Master Agreement&apos;),
				ISPICKVAL(ContractBeingRenewed__r.GeneralAgreementType__c,&apos;Other&apos;)
				),
		ISBLANK(ContractBeingRenewed__r.GeneralAgreementDate__c)
		)
	)	 
)</errorConditionFormula>
        <errorDisplayField>ContractBeingRenewed__c</errorDisplayField>
        <errorMessage>Please update General Agreement Type and Agreement Effective Date on the Originating Contract to proceed. General Agreement Type and Agreement Effective Date is mandatory on Originating Contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InnerYearRecordValidationCheck</fullName>
        <active>true</active>
        <description>SFDC1-7676:The business does not want anyone making changes to fields on an inner year opportunity</description>
        <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &apos;IHSMarkit System Admin&apos;,
   $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   RecordType.Name  = &apos;Inner Year&apos;,
   OR(
       ISCHANGED( Name ),
       ISCHANGED( AccountId ),
       ISCHANGED( CloseDate ),
       ISCHANGED( CurrencyIsoCode ),
       ISCHANGED( SAPContractNumber__c ),
       ISCHANGED( OpportunityOwner__c ),
       AND(ISCHANGED( StageName ),NOT(ISPICKVAL( StageName , 
       &quot;6W-Renewal Won&quot;))) 
   )
)</errorConditionFormula>
        <errorMessage>You are not authorized to update Opportunity values except Stage to &apos;6W-Renewal Won&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockContractEndDateForAutoRenewalChecked</fullName>
        <active>true</active>
        <description>SFDC1-2516 : Contract End Date is Non editable when Auto renewal is checked on Opportunity.
SFDC1-1845 : Updated validation rule to make contract end date field editable.</description>
        <errorConditionFormula>AND (
	AutoRenewal__c = True,
	ISCHANGED(ContractEndDate__c),
	DoesThisAutoRenewalHaveChanges__c = False
	)</errorConditionFormula>
        <errorMessage>&apos;Contract End Date&apos; cannot be changed when Opportunity is associated with Auto-Renewal Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockOpportunityforMarketingProfile</fullName>
        <active>true</active>
        <description>SFDC1-1842 : Locking Opportunity Standard fields which can not be made as readonly using FLS on Profile</description>
        <errorConditionFormula>AND(
   CONTAINS($Profile.Name,&quot;Sales&quot;),
CONTAINS($Profile.Name,&quot;Marketing&quot;),
	OR( 
		ISCHANGED(StageName),
		ISCHANGED(Name),
		ISCHANGED(CloseDate)
	)
)</errorConditionFormula>
        <errorMessage>You are not authorized to update Opportunity values except Primary Campaign Source value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LoststagePopulateLostReasonCode</fullName>
        <active>true</active>
        <description>SFDC1 -171; For a lost pipeline deal, the &quot;Lost Reason code&quot; &amp; Lost Description fields cannot be blank.</description>
        <errorConditionFormula>AND 
(
	OR( 
		ISPICKVAL ( StageName, &quot;6L-Closed Lost&quot;),
		ISPICKVAL ( StageName, &quot;6L-Renewal Lost&quot;)
	),
	OR(
		ISPICKVAL( LostReasonCode__c,&quot;&quot;),ISBLANK(LostReasonDescription__c)
	)
)</errorConditionFormula>
        <errorMessage>Please enter Lost Reason Code &amp; Lost Reason Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OppCloseDateUpdateNotAllowedTMCUser</fullName>
        <active>true</active>
        <description>SFDC1-6552 : To Prevent TMC users to update the Opportunity fields except TMC fields. These users will have Readonly Profile and &apos;TMC User Opportunity Access&apos; Permissionset.</description>
        <errorConditionFormula>AND(
	CONTAINS($Profile.Name , &apos;Read Only&apos;) ,
	ISCHANGED(CloseDate)	
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>You can only update TMC Information fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OppCurrencyUpdateNotAllowedTMCUser</fullName>
        <active>true</active>
        <description>SFDC1-6552 : To Prevent TMC users to update the Opportunity fields except TMC fields. These users will have Readonly Profile and &apos;TMC User Opportunity Access&apos; Permissionset.</description>
        <errorConditionFormula>AND(
	CONTAINS($Profile.Name , &apos;Read Only&apos;) ,
		ISCHANGED(CurrencyIsoCode) 
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>You can only update TMC Information fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OppNameUpdateNotAllowedTMCUser</fullName>
        <active>true</active>
        <description>SFDC1-6552 : To Prevent TMC users to update the Opportunity fields except TMC fields. These users will have Readonly Profile and &apos;TMC User Opportunity Access&apos; Permissionset.</description>
        <errorConditionFormula>AND(
	CONTAINS($Profile.Name , &apos;Read Only&apos;) ,
	ISCHANGED(Name)  
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You can only update TMC Information fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OppStageNameUpdateNotAllowedTMCUser</fullName>
        <active>true</active>
        <description>SFDC1-6552 : To Prevent TMC users to update the Opportunity fields except TMC fields. These users will have Readonly Profile and &apos;TMC User Opportunity Access&apos; Permissionset.</description>
        <errorConditionFormula>AND(
	CONTAINS($Profile.Name , &apos;Read Only&apos;) ,
	ISCHANGED(StageName)	
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You can only update TMC Information fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OppUpdateRestrictionForDataGovernance</fullName>
        <active>true</active>
        <description>SFDC1-1842 : This Validation Rule will prevent Data Governance Team to update opportunity Record except Account Name field.</description>
        <errorConditionFormula>$Profile.Name = &apos;IHSMarkit Data Governance&apos; &amp;&amp;  NOT(ISCHANGED( AccountId))</errorConditionFormula>
        <errorMessage>You are not authorized to update Opportunity Record except Account Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityAutorenewalClosedCheck</fullName>
        <active>true</active>
        <description>SFDC1-6617;When Auto Renewal = No and Does this Auto Renew have Changes? is set to &quot;No&quot; = No - Do not allow a user to manually close win the opportunity from the opportunity\they must close win by clicking ready for processing on the contract</description>
        <errorConditionFormula>AND( ( AutoRenewal__c  = True),
 ( DoesThisAutoRenewalHaveChanges__c = True),
($RecordType.Name =&apos;Renewal&apos; ),
ReadyForProcessingContractExist__c == FALSE, 
(ISPICKVAL(StageName, &quot;6W-Renewal Won&quot;)))</errorConditionFormula>
        <errorMessage>Please close opportunity by clicking ready for Processing on the contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityGratisValueZero</fullName>
        <active>true</active>
        <description>SFDC1-6554;Users cannot put an amount for gratis opportunity</description>
        <errorConditionFormula>AND( ($RecordType.Name =&apos;Gratis&apos; ) ,
     (OR((  FirstYearValue__c   &gt; 0 ),
     ( Amount__c &gt; 0))) )</errorConditionFormula>
        <errorMessage>You cannot put an amount for Gratis opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityProductMandatory</fullName>
        <active>true</active>
        <description>SFDC1-546 : The Opportunity Needs to have at least 1 Product added in order to get out of a Sales Stage 2 and move to Sales Stage 3
SFDC1-1430 : Adding &apos;6L-Closed Lost&apos; value to Stage List to byPass the validation
SFDC1-6971: Bypass w/ currency change</description>
        <errorConditionFormula>AND(
	NOT(ISPICKVAL(StageName , &apos;1-Sales Qualified&apos;)),
	NOT(ISPICKVAL(StageName , &apos;2-Need Confirmed&apos;)),
	NOT(ISPICKVAL(StageName , &apos;6L-Closed Lost&apos;)),
	$RecordType.Name = &quot;New Business&quot;,
	ProductCount__c = 0,
	NOT(ISCHANGED(CurrencyIsoCode)),
        ByPassValidation__c == false
)</errorConditionFormula>
        <errorMessage>Opportunity does not have a Product. Please add a Product to this opportunity before you continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityProductMandatoryFPRecordtype</fullName>
        <active>true</active>
        <description>SFDC1-1993 For Forecasting Placeholder type Opportunity, it is mandatory to add Opportunity Product before progressing past the default sales stage
SFDC1-2295 No Product required if Opportunity is closed with Stage: 6L-Forecasting Placeholder</description>
        <errorConditionFormula>AND(
	AND(NOT(ISPICKVAL(StageName ,&apos;1-Open&apos;)),NOT(ISPICKVAL(StageName ,&apos;6L-Forecasting Placeholder&apos;))),
	$RecordType.Name = &quot;Forecasting Placeholder&quot;,
	( ProductCount__c = 0 ),
	ByPassValidation__c == false,
        NOT(ISCHANGED(CurrencyIsoCode))
	)</errorConditionFormula>
        <errorMessage>Opportunity does not have a Product. Please add a Product to this opportunity before you continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnerUsersEnforceRecordOwner</fullName>
        <active>true</active>
        <description>For Partner community.  Super user community settings enable read/write access to all Opportunities related to the partner account.  Partners should only be able to edit opportunities they own.</description>
        <errorConditionFormula>ISPICKVAL($User.UserType ,&quot;PowerPartner&quot;)
&amp;&amp;
OwnerId &lt;&gt; $User.Id</errorConditionFormula>
        <errorMessage>You are not able to edit this Opportunity as you are not the record owner.</errorMessage>
    </validationRules>
</CustomObject>